reworked css, added search bar to nav bar

--- a/src/main/css/global.scss
+++ b/src/main/css/global.scss
@@ -1,201 +1,11 @@
-
-a {
-  text-decoration: none;
-}
-
-body {
-  margin-bottom: 100px;
-  background-color: ghostwhite;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-/*Header starts*/
-header {
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-/*Header ends*/
-
-body > section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
-  gap: 10px;
-}
-
-.index-containers {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  gap: 10px;
-  margin-top: 200px;
-}
-
-/*Table Starts*/
-
-.tables-container {
-  display: flex;
-  flex-direction: row;
-  height: 75vh;
-  width: 100%;
-}
-
-.preview-block {
-  flex-basis: 50%;
-  height: 100%;
-
-}
-
-.full-table {
-  flex-basis: 50%;
-  height: 100%;
-}
-
-
-.table {
-  width: 80%;
-  align-self: center;
-  font-size: small;
-}
-
-.table-container {
-  display: table;
-  width: 80%;
-
-}
-
-.table-caption {
-  display: table-caption;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.2em;
-}
-
-.table-header {
-  display: table-header-group;
-  background-color: gray;
-  font-weight: bold;
-  font-size: 15px;
-}
-
-.table-item {
-  display: table-row;
-}
-
-.row-item {
-  display: table-cell;
-  padding: 5px;
-  border: 1px solid black;
-}
+// All Songs
 
 .table-row {
   cursor: pointer;
-  background-color: #c7c7c7;
-  padding: 30px;
-  margin: 10px;
-  border: 1px solid #333;
-  transition: 0.15s;
-}
+  transition: all 0.2s ease-in-out;
 
-.table-row:hover {
-  transform: scale(1.02);
-}
-
-/*Table Ends*/
-
-.album-item {
-  width: 80%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
-}
-
-.song-item {
-  width: 80%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
-}
-
-.artist-item {
-  width: 80%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
-}
-
-.table-item {
-  cursor: pointer;
-}
-
-
-footer {
-  --white: white;
-  --dark-color: #505052;
-  --dark-color-transparent: rgba(155, 155, 160, 0.6);
-  --light-color: rgb(189, 188, 188);
-  --box-shadow-up: 0px -5px 15px rgba(0, 0, 0, 0.2);
-  --box-shadow-down: 2px 5px 15px rgba(0, 0, 0, 0.2);
-  --button-shadow-down: 2px 5px 15px rgba(0, 0, 0, 0.3);
-
-
-  width: calc(100vw - 20px);
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: var(--dark-color-transparent);
-  border: 0 solid gray;
-  border-radius: 10px 10px 0 0;
-  box-shadow: var(--box-shadow-up);
-}
-
-footer > .footer-section {
-  display: flex;
-
-}
-
-footer > .footer-section > .button-container {
-  width: 70px;
-  height: 70px;
-  background-color: var(--white);
-  margin: 0 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.button {
-  cursor: pointer;
-}
-
-
-/*   Login   */
-#login-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.tab-pane > form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  gap: 10px;
+  &:hover {
+    background-color: #f5f5f5;
+    transform: scale(1.02);
+  }
 }
