--- a/src/main/resources/templates/generalError.html
+++ b/src/main/resources/templates/generalError.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments/head :: head (${title})}"></head>
+>
+<head>
+    <thymeleaf th:replace="~{fragments/meta :: meta (${title})}"></thymeleaf>
+</head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <h1> Big problem here...</h1>
