--- a/src/main/resources/templates/pageHistory.html
+++ b/src/main/resources/templates/pageHistory.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="~{fragments/head :: head (${title})}"></head>
-    <body>
-    <header th:replace="~{fragments/header :: header (${headerList})}"></header>
-    <section>
-            <div class="table-caption">
-                <h1>Page History</h1>
-            </div>
-            <table class='table table-bordered table-condensed table-striped table-hover'>
-                <thead class="table-header">
-                <th>Page</th>
-                <th>Time</th>
-                </thead>
-                <tbody>
-                <tr class="table-row2" th:each="page : ${pageHistory}">
-                    <td th:text="${page.timeStamp()}"></td>
-                    <td th:text="${page.message()}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </section>
-        <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
-    </body>
+<head>
+    <thymeleaf th:replace="~{fragments/meta :: meta (${title})}"></thymeleaf>
+</head>
+<body>
+<header th:replace="~{fragments/header :: header (${headerList})}"></header>
+<section>
+    <div class="table-caption">
+        <h1>Page History</h1>
+    </div>
+    <table class='table table-bordered table-condensed table-striped table-hover'>
+        <thead class="table-header">
+        <th>Page</th>
+        <th>Time</th>
+        </thead>
+        <tbody>
+        <tr class="table-row2" th:each="page : ${pageHistory}">
+            <td th:text="${page.timeStamp()}"></td>
+            <td th:text="${page.message()}"></td>
+        </tr>
+        </tbody>
+    </table>
+</section>
+<footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+</body>
 </html>
