--- a/src/main/resources/templates/entityError.html
+++ b/src/main/resources/templates/entityError.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head :: head (${title})}"></head>
+<head>
+    <thymeleaf th:replace="~{fragments/meta :: meta (${title})}"></thymeleaf>
+</head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <h1> Small problem here...</h1>
