--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,82 +1,73 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head :: head (${title})}"></head>
+<head>
+    <thymeleaf th:replace="~{fragments/meta :: meta (${title})}"></thymeleaf>
+</head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
-<ul class="navbar-nav ms-auto" th:fragment="loginRegister (content)">
-    <li class="nav-item me-2 pt-2" sec:authorize="isAuthenticated()">
-        <span class="navbar-text">Welcome, <span sec:authentication="name"></span>!</span>
-    </li>
-    <li sec:authorize="isAuthenticated()">
-        <form class="d-flex" th:action="@{/logout}" th:method="POST">
-            <button class="btn btn-secondary" type="submit">Sign out</button>
-        </form>
-    </li>
-    <li class="nav-item" sec:authorize="!isAuthenticated()">
-        <a class="nav-link" th:classappend="${page == 'login'} ? 'active' : ''" th:href="@{/login}">Sign in</a>
-    </li>
-</ul>
-<div id="login-container">
-    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item" role="presentation">
-            <button aria-controls="pills-login" aria-selected="true" class="nav-link active"
-                    data-bs-target="#pills-login"
-                    data-bs-toggle="pill" id="pills-login-tab" role="tab" type="button">Login
-            </button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button aria-controls="pills-register" aria-selected="false" class="nav-link"
-                    data-bs-target="#pills-register"
-                    data-bs-toggle="pill" id="pills-register-tab" role="tab" type="button">Register
-            </button>
-        </li>
-    </ul>
-    <div class="tab-content" id="pills-tabContent">
-        <div aria-labelledby="pills-login-tab" class="tab-pane fade show active" id="pills-login" role="tabpanel">
-            <form method="POST" th:action="@{/login}">
-                <div class="form-floating mb-4">
-                    <input class="form-control" id="login-user-name" name="username" placeholder="Username"
-                           type="text"/>
-                    <label class="form-label" for="login-user-name">Username</label>
-                </div>
+<div class="d-flex justify-content-center align-content-center align-items-center min-vh-100 h-100">
+    <div class="w50 rounded-4 border-dark -" id="login-container">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button aria-controls="pills-login" aria-selected="true" class="nav-link active"
+                        data-bs-target="#pills-login"
+                        data-bs-toggle="pill" id="pills-login-tab" role="tab" type="button">Login
+                </button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button aria-controls="pills-register" aria-selected="false" class="nav-link"
+                        data-bs-target="#pills-register"
+                        data-bs-toggle="pill" id="pills-register-tab" role="tab" type="button">Register
+                </button>
+            </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+            <div aria-labelledby="pills-login-tab" class="tab-pane fade show active" id="pills-login" role="tabpanel">
+                <form method="POST" th:action="@{/login}">
+                    <div class="form-floating mb-4">
+                        <input class="form-control" id="login-user-name" name="username" placeholder="Username"
+                               type="text"/>
+                        <label class="form-label" for="login-user-name">Username</label>
+                    </div>
 
-                <div class="form-floating mb-4">
-                    <input class="form-control" id="login-password" name="password" placeholder="Password"
-                           type="password"/>
-                    <label class="form-label" for="login-password">Password</label>
-                </div>
+                    <div class="form-floating mb-4">
+                        <input class="form-control" id="login-password" name="password" placeholder="Password"
+                               type="password"/>
+                        <label class="form-label" for="login-password">Password</label>
+                    </div>
 
-                <button class="btn btn-primary btn-block" type="submit">Sign in</button>
-            </form>
-        </div>
-        <div aria-labelledby="pills-register-tab" class="tab-pane fade" id="pills-register" role="tabpanel">
-            <form method="post" th:action="@{/register}">
-                <div class="form-floating mb-4">
-                    <input class="form-control" id="register-user-name" name="username" placeholder="User Name"
-                           type="text"/>
-                    <label class="form-label" for="register-user-name">User Name</label>
-                </div>
+                    <button class="btn btn-primary btn-block" type="submit">Sign in</button>
+                </form>
+            </div>
+            <div aria-labelledby="pills-register-tab" class="tab-pane fade" id="pills-register" role="tabpanel">
+                <form method="post" th:action="@{/register}">
+                    <div class="form-floating mb-4">
+                        <input class="form-control" id="register-user-name" name="username" placeholder="User Name"
+                               type="text"/>
+                        <label class="form-label" for="register-user-name">User Name</label>
+                    </div>
 
-                <div class="form-floating mb-4">
-                    <input class="form-control" id="register-password" name="password" placeholder="Confirm-Password"
-                           type="password"/>
-                    <label class="form-label" for="register-password">Password</label>
-                </div>
+                    <div class="form-floating mb-4">
+                        <input class="form-control" id="register-password" name="password"
+                               placeholder="Confirm-Password"
+                               type="password"/>
+                        <label class="form-label" for="register-password">Password</label>
+                    </div>
 
-                <div class="form-group">
-                    <label for="register-role">User Role</label>
-                    <select class="form-control" id="register-role" name="role">
-                        <option>USER</option>
-                        <option>ADMIN</option>
-                    </select>
-                </div>
+                    <div class="form-group">
+                        <label for="register-role">User Role</label>
+                        <select class="form-control" id="register-role" name="role">
+                            <option>USER</option>
+                            <option>ADMIN</option>
+                        </select>
+                    </div>
 
 
-                <button class="btn btn-primary btn-block" type="submit">Register</button>
-            </form>
+                    <button class="btn btn-primary btn-block" type="submit">Register</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
