--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
 <head>
     <title>header</title></head>
 <body>
-<header th:fragment="header (list)">
+<header th:fragment="header (page)">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Song Manager</a>
@@ -27,15 +27,16 @@
                     </li>
                 </ul>
                 <div class="row w-50">
-                    <form class="d-flex col w-75" role="search">
+                    <form class="d-flex col w-75" role="search" th:if="${page == 'AllSongs'}">
                         <input aria-label="Search" class="form-control me-2" id="search-bar" placeholder="Search"
                                type="search">
                     </form>
-                    <form class="d-flex col" sec:authorize="isAuthenticated()" th:action="@{/logout}" th:method="POST">
+                    <form class="d-flex col flex-row-reverse" sec:authorize="isAuthenticated()" th:action="@{/logout}"
+                          th:method="POST">
                         <button class="btn btn-secondary" type="submit">Sign out</button>
                     </form>
 
-                    <a class="col" sec:authorize="!isAuthenticated()" th:href="@{/login}">
+                    <a class="col d-flex flex-row-reverse" sec:authorize="!isAuthenticated()" th:href="@{/login}">
                         <button class="btn btn-secondary">Sign In</button>
                     </a>
                 </div>
