--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="index-containers min-vh-100 h-100 w-100 d-flex justify-content-center align-items-center align-content-center">
-    <div class="col">
+    <div class="col text-center">
         <a href="/allSongs">
             <button class="btn btn-secondary btn-lg" type="button">All Songs</button>
         </a>
