--- a/src/main/resources/templates/addSongs.html
+++ b/src/main/resources/templates/addSongs.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <thymeleaf th:replace="~{fragments/meta :: meta (${title})}"></thymeleaf>
 </head>
 <body>
+<header th:replace="~{fragments/header :: header(page='adSongs')}"></header>
+<section class="min-vh-100 h-100 transition-fade">
 
+</section>
+<footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 </body>
 </html>
