--- a/src/main/resources/templates/addSongs.html
+++ b/src/main/resources/templates/addSongs.html
@@ -10,6 +10,22 @@
 <header th:replace="~{fragments/header :: header(page='adSongs')}"></header>
 <section class="min-vh-100 h-100 transition-fade">
 
+    <!--    form with a file input -->
+    <form
+            class="container py-5"
+            enctype="multipart/form-data"
+            method="POST"
+            th:action="@{/allSongs/upload}"
+    >
+        <div>
+            <label class="form-label" for="file">Song CSV</label>
+            <input class="form-control form-control-lg" id="file" name="file" type="file">
+        </div>
+        <!--        upload button-->
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button class="btn btn-primary" type="submit">Upload</button>
+        </div>
+    </form>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 </body>
