--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -3,11 +3,114 @@
 <head>
     <title th:text="${title}"></title>
     <thymeleaf th:replace="~{fragments/meta :: meta (${title})}"></thymeleaf>
+    <script defer th:src="@{/js/bundle-editUser.js}" type="module"></script>
+    <script defer th:src="@{/js/bundle-addUser.js}" type="module"></script>
+    <script defer th:src="@{/js/bundle-user.js}" type="module"></script>
 </head>
 <body>
 <header th:replace="~{fragments/header :: header(page='AllSongs')}"></header>
 <section class="min-vh-100 h-100 transition-fade">
-
+    <!--  display a list of all users-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Admin Page</h1>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Role</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="users-table-body">
+                    <tr th:each="user : ${users}">
+                        <td th:text="${user.username}"></td>
+                        <td th:text="${user.role}"></td>
+                        <td>
+                            <button class="btn btn-danger delete-user-button" th:data-user-id="${user.id}"
+                                    th:if="${user.id != currentUser.id}" type="button">Delete
+                            </button>
+                            <button class="btn btn-secondary edit-user-button" data-bs-target="#edit-user-modal"
+                                    data-bs-toggle="modal"
+                                    th:data-user-id="${user.id}" type="button">Edit
+                            </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div class="d-flex justify-content-center align-content-center">
+                    <button class="btn btn-primary" data-bs-target="#add-user-modal" data-bs-toggle="modal"
+                            type="button">Add User
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div aria-hidden="true" aria-labelledby="edit-user-modal-label" class="modal fade" id="edit-user-modal"
+         tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5 text-center" id="idea-submission-modal-label">Edit User</h1>
+                    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="edit-user-modal-form">
+                        <div class="form-group mb-3">
+                            <label for="new-username">UserName</label>
+                            <input class="form-control" id="new-username" name="username" type="text">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label for="new-role">Role</label>
+                            <select class="form-control" id="new-role" name="role">
+                                <option value="USER">USER</option>
+                                <option value="ADMIN">ADMIN</option>
+                            </select>
+                        </div>
+                        <div class="form-group mt-3 mb-5 d-flex align-items-center justify-content-center">
+                            <button class="btn btn-primary " id="edit-user-modal-submit-button" type="submit">Edit
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div aria-hidden="true" aria-labelledby="add-user-modal-label" class="modal fade" id="add-user-modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5 text-center" id="add-user-modal-label">Add User</h1>
+                    <button aria-label="Close" class="btn-close modal-close-btn" data-bs-dismiss="modal"
+                            type="button"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="add-user-modal-form">
+                        <div class="form-group mb-3">
+                            <label for="username">UserName</label>
+                            <input class="form-control" id="username" name="username" type="text">
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="password">Password</label>
+                            <input class="form-control" id="password" name="password" type="password">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label for="role">Role</label>
+                            <select class="form-control" id="role" name="role">
+                                <option value="USER">USER</option>
+                                <option value="ADMIN">ADMIN</option>
+                            </select>
+                        </div>
+                        <div class="form-group mt-3 mb-5 d-flex align-items-center justify-content-center">
+                            <button class="btn btn-primary " id="add-user-modal-submit-button" type="submit">Create
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 </body>
