--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 <header th:fragment="header (page)">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Song Manager</a>
+            <a class="navbar-brand" href="/">Song Manager</a>
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler" data-bs-target="#navbarSupportedContent"
                     data-bs-toggle="collapse" type="button">
@@ -24,6 +24,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/allArtists" th:fragment="allArtists (content)">All Artists</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/addSongs" sec:authorize="hasRole('ROLE_ADMIN')"
+                           th:fragment="allArtists (content)">Add Bulk Songs</a>
                     </li>
                 </ul>
                 <div class="row w-50">
