--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
         <a href="/allUsers" sec:authorize="hasRole('ROLE_ADMIN')">
             <button class="btn btn-secondary btn-lg" type="button">All Users</button>
         </a>
-        <a href="/addSongs" sec:authorize="hasRole('ROLE_ADMIN')">
+        <a href="/allSongs/addSongs" sec:authorize="hasRole('ROLE_ADMIN')">
             <button class="btn btn-secondary btn-lg" type="button">Add Bulk Songs</button>
         </a>
         <a href="/login">
